# RangeQueries

./: CMakeLists.txt  LICENSE  README.md
Headers/: B_ary_tree.h  B_ary_tree_min.h  HaarTransform.h  InputPS.h  InputRR.h  LDP_mechanisms.h  LevelHT.h  LevelHT2.h  OLH.h  RandomData.h  Timer.h  TrueInput.h  helpers.h  node_b.h  node_b_l.h  xxhash32.h
main/: avgerr.cpp  mseranges.cpp  quantiles.cpp  vary_b_ci_8.csv
main/plottingscripts/: rangemse.py
misc/: B_ary_tree.cpp  LevelHT2.cpp  Makefile
sources/: B_ary_tree_min.cpp  HaarTransform.cpp  InputRR.cpp  LevelHT.cpp  OLH.cpp  RandomData.cpp  Timer.cpp  TrueInput.cpp  helpers.cpp  xxhash32.cpp
treefiles/: haar_tree_1024.csv  haar_tree_256.csv  haar_tree_64.csv
